# try-rust-graphql

./: .gitignore  Cargo.toml  docker-compose.yml  run.sh
.docker/mysql/: 01_schema.sql  02_users.sql
src/: main.rs
