[package]
name = "try-rust-graphql"
version = "0.1.0"
authors = ["ryoasu <ryoasu107@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-cors = "0.5.4"
juniper = "0.15.4"
mysql = "18"
r2d2 = "0.8.9"
r2d2_mysql = "18.0.0"
